; ModuleID = '/home/carl/AnghaBench/linux/fs/nilfs2/extr_segbuf.c_nilfs_segbuf_set_next_segnum.c'
source_filename = "/home/carl/AnghaBench/linux/fs/nilfs2/extr_segbuf.c_nilfs_segbuf_set_next_segnum.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nilfs_segment_buffer = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32 }
%struct.the_nilfs = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nilfs_segbuf_set_next_segnum(%struct.nilfs_segment_buffer* %0, i32 %1, %struct.the_nilfs* %2) #0 {
  %4 = alloca %struct.nilfs_segment_buffer*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.the_nilfs*, align 8
  store %struct.nilfs_segment_buffer* %0, %struct.nilfs_segment_buffer** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.the_nilfs* %2, %struct.the_nilfs** %6, align 8
  %7 = load i32, i32* %5, align 4
  %8 = load %struct.nilfs_segment_buffer*, %struct.nilfs_segment_buffer** %4, align 8
  %9 = getelementptr inbounds %struct.nilfs_segment_buffer, %struct.nilfs_segment_buffer* %8, i32 0, i32 1
  store i32 %7, i32* %9, align 4
  %10 = load %struct.the_nilfs*, %struct.the_nilfs** %6, align 8
  %11 = load i32, i32* %5, align 4
  %12 = call i32 @nilfs_get_segment_start_blocknr(%struct.the_nilfs* %10, i32 %11)
  %13 = load %struct.nilfs_segment_buffer*, %struct.nilfs_segment_buffer** %4, align 8
  %14 = getelementptr inbounds %struct.nilfs_segment_buffer, %struct.nilfs_segment_buffer* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  store i32 %12, i32* %15, align 4
  ret void
}

declare dso_local i32 @nilfs_get_segment_start_blocknr(%struct.the_nilfs*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
